enable adding options & decisions
